# ocr-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
IMG_OCR_IND_CN/BADGES AND PASSES/: INDONESIAN_CARD_ZZ_2025033000001.json  INDONESIAN_CARD_ZZ_2025033000002.json  INDONESIAN_CARD_ZZ_2025033000004.json  INDONESIAN_CARD_ZZ_2025033000009.json  INDONESIAN_CARD_ZZ_2025033000010.json
IMG_OCR_IND_CN/BILLS/: INDONESIAN_RECEIPT_ZZ_2025041400001.json  INDONESIAN_RECEIPT_ZZ_2025041400002.json  INDONESIAN_RECEIPT_ZZ_2025041400003.json  INDONESIAN_RECEIPT_ZZ_2025041400004.json  INDONESIAN_RECEIPT_ZZ_2025041400005.json
IMG_OCR_IND_CN/BOOK CONTENTS OR COVERS/: INDONESIAN_BOOKCONTENT_WXD_20250403000002.json  INDONESIAN_BOOKCONTENT_WXD_20250403000004.json  INDONESIAN_BOOKCONTENT_WXD_20250403000008.json  INDONESIAN_BOOKCONTENT_WXD_20250403000051.json  INDONESIAN_BOOKCONTENT_WXD_20250403000052.json
IMG_OCR_IND_CN/CONTRACTS/: INDONESIAN_CONTRACT_WXD_000029.json  INDONESIAN_CONTRACT_WXD_000061.json  INDONESIAN_CONTRACT_WXD_000067.json  INDONESIAN_CONTRACT_WXD_000084.json  INDONESIAN_CONTRACT_WXD_000096.json
IMG_OCR_IND_CN/FORMS/: INDONESIAN_TABLE_BG_2025032500084.json  INDONESIAN_TABLE_WXD_2025040500072.json  INDONESIAN_TABLE_WXD_2025040500079.json  INDONESIAN_TABLE_WXD_2025040500088.json  INDONESIAN_TABLE_WXD_2025040500089.json
IMG_OCR_IND_CN/IDENTITY CARDS/: INDONESIAN_IDCARD_034415.json  INDONESIAN_IDCARD_034416.json  INDONESIAN_IDCARD_034417.json  INDONESIAN_IDCARD_034418.json  INDONESIAN_IDCARD_034419.json
IMG_OCR_IND_CN/NEWSPAPERS/: INDONESIAN_NEWSPAPER_SMARTI_2025040800003.json  INDONESIAN_NEWSPAPER_SMARTI_2025040800005.json  INDONESIAN_NEWSPAPER_SMARTI_2025040800006.json  INDONESIAN_NEWSPAPER_SMARTI_2025040800009.json  INDONESIAN_NEWSPAPER_SMARTI_2025040800010.json
IMG_OCR_IND_CN/NOTES/: INDONESIAN_NOTE_ZZ_2025032500007.json  INDONESIAN_NOTE_ZZ_2025032500010.json  INDONESIAN_NOTE_ZZ_2025032500011.json  INDONESIAN_NOTE_ZZ_2025032500012.json  (+1 more)
docs/: panduan-presentasi.md  plan-new-dataset.md  plan-tts.md  plan.md
reports/: .gitignore
scripts/: download_voice.py  run_benchmark.py  run_tts_benchmark.py
tests/: test_smoke.py  test_tts_smoke.py
ui/: app.js  datasets.html  index.html  style.css  tts.html
(+42 files in other folders)
