[project]
name = "ocr-benchmark"
version = "0.1.0"
description = "Standalone OCR benchmark for the ai4db backend on Indonesian documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rapidocr-onnxruntime==1.4.4",  # LOCKED — same as ai4db so model pack is byte-identical (see docs/plan.md §4)
  "opencv-python>=4.9",
  "numpy>=1.26",
  "pillow>=10",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jiwer>=3.0",
  "symspellpy>=6.7",            # post-processing spell correction
  "pydantic-settings>=2.0",     # .env-driven feature flag
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0"]

[project.scripts]
ocr-bench-serve = "ocr_bench.api:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
