[project]
name = "ocr-benchmark"
version = "0.1.0"
description = "Standalone OCR benchmark for the ai4db backend on Indonesian documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rapidocr>=3.9.0",              # v3 with PP-OCRv6 models (was rapidocr-onnxruntime==1.4.4)
  "onnxruntime>=1.17",            # engine backend for rapidocr
  "opencv-python-headless>=4.9",
  "numpy>=1.26",
  "pillow>=10",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jiwer>=3.0",
  "symspellpy>=6.7",            # post-processing spell correction
  "pydantic-settings>=2.0",     # .env-driven feature flag
  "piper-tts>=1.4",             # TTS benchmark — same backend/voice ai4db runs (reuses onnxruntime)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0"]
intelligibility = ["faster-whisper>=1.0"]   # only for the opt-in TTS->STT->CER loop (plan-tts §7); not installed by default

[project.scripts]
ocr-bench-serve = "ocr_bench.api:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = ["opencv-python-headless>=4.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
